# AI_solo_coder_task_B_142

./: .env  README.md  check_output.txt  docker-compose.yml  err.txt  final_r1.txt  final_r2.txt  final_r3.txt  result_tests.txt  test_out2.txt  verify_tests.txt
backend/: .env.example  Cargo.toml  Dockerfile  cargo_check_output.txt  check_output.txt  test_out.txt
backend/config/: geomagnetic_data.json  magnetic_params.json
backend/src/: alert_service.rs  cals10k_model.rs  channels.rs  compute_pool.rs  config.rs  database.rs  device_comparator.rs  era_comparator.rs  errors.rs  handlers.rs  interference_simulator.rs  lib.rs  main.rs  metrics.rs  micromagnetic_simulation.rs  models.rs  mqtt_service.rs  vr_sinan.rs
backend/src/alarm_mqtt/: mod.rs
backend/src/dtu_receiver/: mod.rs  validation.rs
backend/src/geomagnetic_reconstructor/: mod.rs
backend/src/magnetic_simulator/: mod.rs
deploy/clickhouse/: config.xml
deploy/mosquitto/: mosquitto.conf
deploy/prometheus/: prometheus.yml
deploy/prometheus/rules/: sinan_alerts.yml
frontend/: Dockerfile  index.html  nginx.conf
frontend/conf.d/: default.conf
frontend/css/: style.css
frontend/js/: charts.js  config.js  data.js  deviceCompare.js  eraCompare.js  experience_features.js  interferenceSim.js  magnetic_panel.js  main.js  sinan3d.js  sinan_3d.js  vectorfield.js  vrSinan.js
scripts/: Dockerfile  clickhouse_init.sql  requirements.txt  sensor_simulator.py  sensor_simulator_enhanced.py
