[package]
name = "sinan-backend"
version = "1.0.0"
edition = "2021"
description = "古代司南磁石指向精度仿真与地磁场重建系统 - Rust后端服务"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
clickhouse = "0.14"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rumqttc = "0.24"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1.0"
parking_lot = "0.12"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
lazy_static = "1.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
futures = "0.3"
bytes = "1.5"
tokio-stream = { version = "0.1", features = ["sync"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.15"
rayon = "1.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
